[LRN] Fixes florin spacing issue
Conflicts:
	test/unit/css.test.js

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -71,7 +71,7 @@
   }
 
   var.mq-f {
-    margin-right: 0.1em;
+    margin-right: 0.2em;
     margin-left: 0.1em;
   }
 
